making it actually work

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
         <script src="scripts/services/schedulecreator.js"></script>
         <script src="scripts/filters/meridiem.js"></script>
         <script src="scripts/services/dayconfig.js"></script>
+        <script src="scripts/services/utilities.js"></script>
         <!-- endbuild -->
 </body>
 </html>
